project(HandsOnNetworkProgrammingWithC)

log_info("Configuring Hands-On Network Programming with C examples")

add_subdirectory(chap01)
add_subdirectory(chap02)
add_subdirectory(chap03)
add_subdirectory(chap04)
add_subdirectory(chap05)
add_subdirectory(chap06)
add_subdirectory(chap07)
add_subdirectory(chap08)
add_subdirectory(chap09)
add_subdirectory(chap10)
add_subdirectory(chap11)
add_subdirectory(chap13)

log_info("Configuring Hands-On Network Programming with C examples -- DONE")
